# AIDP-Antigravity-Platform

./: .coverage  .gcloudignore  .gitignore  .pre-commit-config.yaml  000_PROJECT_CONSTITUTION.md  001_SYSTEM_REQUIREMENTS_SPECIFICATION.md  002_HIGH_LEVEL_SYSTEM_ARCHITECTURE.md  003_TECHNOLOGY_LANDSCAPE_ANALYSIS.md  004_MATHEMATICAL_CAPABILITY_MAPPING.md  005_COMPLEXITY_ANALYSIS.md  CONTRIBUTING.md  CROSS_MODEL_PROGRAM.md  Dockerfile  Dockerfile.backend  EVIDENCE_LEDGER.md  LEADERBOARD.md  OFFICIAL_AIDP_RESULTS.json  OFFICIAL_BASELINE_RESULTS.json  OFFICIAL_DISCOVERYBENCH_RESULTS.json  PLATFORM_INTELLIGENCE_AUDIT.json  README.md  RELEASE_V1.md  REPRODUCTION.md  REPRODUCTION_LOG.md  REPRODUCTION_PROTOCOL.md  STATUS.md  VALIDATION_MATRIX.md  aidp_ledger.db  analyze_failures.py  apprunner.json  cloudbuild.yaml  conftest.py  debate_forensics.py  docker-compose.yml  engine_validation_metrics.json  generate_human_reports.py  mypy_output.txt  mypy_src.txt  pyproject.toml  pytest.ini  (+15 more)
.aidp_memory/: decisions.jsonl  evidence.jsonl  experiments.jsonl  failures.jsonl  identity.json
.checkpoints/: sess_00dae13a-1c58-4dcc-a50b-baf7363aa7a7.json  sess_04985555-c128-49a7-8ec6-b1f9de66cf1e.json  sess_10853368-fc40-48a4-9a12-ad1fbe43b23f.json  sess_13249b12-2bd0-4ace-a934-4e7b7c50989f.json  sess_1a6ada1a-47ac-437a-8741-9a05cf6b1cc9.json  sess_1f04d4a4-198f-4e9c-91a1-32c04a848754.json  sess_1f527256-7a20-4959-bbab-7ecd41f2c982.json  sess_1fc78759-c298-4254-9abb-a255b05d557c.json  sess_2b6c8b04-2132-4b97-9700-629eaa22704a.json  sess_2cb4a998-5d26-46ee-854c-381977c478f2.json  sess_2ce6820f-b918-4324-9269-098386a2fc46.json  (+50 more)
OMEGA_AUDIT_REPORT/: task.md  (+28 more)
(+782 files in other folders)
