[project]
name = "aidp"
version = "0.1.0"
description = "Artificial Intelligence Discovery Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ray>=2.9.0; sys_platform != 'win32'",
    "pycapnp>=1.3.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "pymupdf>=1.23.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sentence-transformers>=5.6.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "streamlit>=1.59.0",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "litellm>=1.20.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.98.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG", "ERA"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ray"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "src/aidp/core/actor.py", # TD-001: Excluded from coverage on local Windows environments until WSL2 is mandated.
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pylint>=4.0.6",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
